<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp"
    tools:context=".Views.Activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/corner_round_shape"
        android:backgroundTint="@color/login_edit_text_drawable_bg"
        android:padding="@dimen/_15sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/small_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/yellow" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/corner_round_shape"
            android:backgroundTint="@color/opacity_grey"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerText">


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroup"
                style="@style/ToggleButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:weightSum="2"
                app:checkedButton="@id/adminButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/toggle_button_selector"
                    android:text="@string/user"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/adminButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/toggle_button_selector"
                    android:text="@string/admin"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/toggleGroup">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:background="@color/login_edit_text_drawable_bg"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/baseline_perm_identity_24"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_edit_text_color"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/LightGrey"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/phoneError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invalid Phone"
                android:visibility="gone"
                android:textColor="@color/red"
                app:layout_constraintBottom_toTopOf="@id/passwordLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneLayout" />

            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneError">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:background="@color/login_edit_text_drawable_bg"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/baseline_lock_24"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_edit_text_color"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/LightGrey"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/corner_round_shape"
                android:backgroundTint="@color/login_button_color"
                android:letterSpacing=".2"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/gray"
                android:enabled="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPasswordButton">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>